--- a/index.html
+++ b/index.html
@@ -20,11 +20,7 @@
 <body>
   <header>
     <h1>
-        Key Features:
-        Viewport Meta Tag: Ensures the design adapts to different screen sizes.
-        Flexbox Layout: Used for flexible and responsive alignment of navigation and content.
-        Media Queries: Adjusts the layout for screens smaller than 600px (e.g., smartphones).
-        You can cojfyufyfyfhpy and paste this code into an HTML file and open it in a browser to see the responsive behavior.
+        paste here
 
     </h1>
 
