--- a/index.html
+++ b/index.html
@@ -78,13 +78,68 @@ The crisp output value S* will be approximately 45 (the center of the truncated 
 
 Therefore, the defuzzified cooling intensity value is approximately 45 units on the scale of 0-100.
 
-This indicates a medium cooling intensity, which makes sense given the moderate temperature and humidity values provided.​​​​​​​​​​​​​​​​
+This indicates a medium cooling intensity, which makes sense given the moderate temperature and humidity values provided.​​​​​​​​​​​​​​​​<br>
 
     </h1>
 
   </header>
   <main>
-    
+    Q D2 - Solving the 8-Queens Problem using Genetic Algorithm
+
+Step 1: Given Population (Chromosomes)
+
+Each chromosome represents a board configuration where the index represents the column, and the value represents the row position of the queen.
+	1.	[2, 5, 1, 7, 4, 6, 8, 3]
+	2.	[3, 6, 8, 4, 7, 2, 5, 1]
+	3.	[8, 3, 5, 1, 6, 4, 2, 7]
+	4.	[7, 4, 1, 8, 2, 3, 6, 5]
+
+Step 2: Fitness Calculation
+
+The fitness function counts the number of non-attacking pairs of queens. The goal is to maximize this value.
+	•	Total pairs in a valid solution: ￼
+	•	Conflicting pairs: Count the number of queens attacking each other (same row, diagonal).
+	•	Fitness = Total pairs - Conflicting pairs
+
+For simplicity, assume we computed fitness values:
+	1.	Fitness = 18
+	2.	Fitness = 20
+	3.	Fitness = 22
+	4.	Fitness = 21
+
+Higher fitness means fewer attacks.
+
+Step 3: Selection (Tournament Selection)
+
+We randomly select two parents with high fitness for crossover. Assume we pick:
+	•	Parent 1: [3, 6, 8, 4, 7, 2, 5, 1]
+	•	Parent 2: [8, 3, 5, 1, 6, 4, 2, 7]
+
+Step 4: One-Point Crossover (Position 4)
+
+Crossover at the 4th position:
+	•	Parent 1: [3, 6, 8, 4 | 7, 2, 5, 1]
+	•	Parent 2: [8, 3, 5, 1 | 6, 4, 2, 7]
+
+After crossover, we swap the second halves:
+	•	Child 1: [3, 6, 8, 4, 6, 4, 2, 7]
+	•	Child 2: [8, 3, 5, 1, 7, 2, 5, 1]
+
+Step 5: Mutation (20% Probability)
+
+Mutation means randomly changing one value in a chromosome with a 20% probability.
+	•	Assume we mutate Child 1 at position 6: [3, 6, 8, 4, 6, 3, 2, 7]
+	•	Assume we mutate Child 2 at position 2: [8, 3, 4, 1, 7, 2, 5, 1]
+
+Step 6: New Population
+
+The updated population after one epoch:
+	1.	[3, 6, 8, 4, 6, 3, 2, 7] (Mutated Child 1)
+	2.	[8, 3, 4, 1, 7, 2, 5, 1] (Mutated Child 2)
+	3.	[8, 3, 5, 1, 6, 4, 2, 7] (Old Parent 2)
+	4.	[7, 4, 1, 8, 2, 3, 6, 5] (Old Parent 1)
+
+This process repeats until we reach an optimal solution where no queens attack each other.
   </main>
 </body>
 </html>
