--- a/index.html
+++ b/index.html
@@ -264,6 +264,255 @@
 <p>This process repeats until we reach an optimal solution where no queens attack each other.</p>
 
 </body>
+<main>
+  Q C2 -<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Genetic Algorithm Selection Methods</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
+        }
+        h1, h2 {
+            color: #2c3e50;
+            border-bottom: 2px solid #3498db;
+            padding-bottom: 10px;
+        }
+        .method {
+            margin-bottom: 30px;
+        }
+        .visualization {
+            width: 100%;
+            height: 40px;
+            background: #ecf0f1;
+            margin: 10px 0;
+            position: relative;
+            border-radius: 4px;
+            overflow: hidden;
+        }
+        .segment {
+            height: 100%;
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 14px;
+        }
+        .pointer {
+            position: absolute;
+            top: -20px;
+            width: 2px;
+            height: 80px;
+            background-color: red;
+            z-index: 2;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        th, td {
+            padding: 12px;
+            text-align: left;
+            border: 1px solid #ddd;
+        }
+        th {
+            background-color: #3498db;
+            color: white;
+        }
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+        .comparison {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .pros-cons {
+            background-color: #f8f9fa;
+            padding: 15px;
+            border-radius: 4px;
+        }
+        .pros {
+            color: #27ae60;
+        }
+        .cons {
+            color: #c0392b;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Genetic Algorithm Selection Methods Comparison</h1>
+        
+        <div class="method">
+            <h2>1. Roulette-Wheel Selection</h2>
+            <table>
+                <tr>
+                    <th>String</th>
+                    <th>Fitness</th>
+                    <th>Probability</th>
+                    <th>Cumulative</th>
+                </tr>
+                <tr>
+                    <td>String 1</td>
+                    <td>80%</td>
+                    <td>0.80</td>
+                    <td>0.80</td>
+                </tr>
+                <tr>
+                    <td>String 2</td>
+                    <td>10%</td>
+                    <td>0.10</td>
+                    <td>0.90</td>
+                </tr>
+                <tr>
+                    <td>String 3</td>
+                    <td>7%</td>
+                    <td>0.07</td>
+                    <td>0.97</td>
+                </tr>
+                <tr>
+                    <td>String 4</td>
+                    <td>3%</td>
+                    <td>0.03</td>
+                    <td>1.00</td>
+                </tr>
+            </table>
+            
+            <div class="visualization">
+                <div class="segment" style="left: 0%; width: 80%; background-color: #3498db;">String 1 (80%)</div>
+                <div class="segment" style="left: 80%; width: 10%; background-color: #2ecc71;">String 2 (10%)</div>
+                <div class="segment" style="left: 90%; width: 7%; background-color: #e74c3c;">String 3 (7%)</div>
+                <div class="segment" style="left: 97%; width: 3%; background-color: #f1c40f;">String 4 (3%)</div>
+                <div class="pointer" style="left: 45%;"></div>
+            </div>
+            <p>Random number (0.45) selects: <strong>String 1</strong></p>
+        </div>
+
+        <div class="method">
+            <h2>2. Rank Selection</h2>
+            <table>
+                <tr>
+                    <th>String</th>
+                    <th>Fitness</th>
+                    <th>Rank</th>
+                    <th>Probability</th>
+                    <th>Cumulative</th>
+                </tr>
+                <tr>
+                    <td>String 1</td>
+                    <td>80%</td>
+                    <td>4</td>
+                    <td>0.40</td>
+                    <td>0.40</td>
+                </tr>
+                <tr>
+                    <td>String 2</td>
+                    <td>10%</td>
+                    <td>3</td>
+                    <td>0.30</td>
+                    <td>0.70</td>
+                </tr>
+                <tr>
+                    <td>String 3</td>
+                    <td>7%</td>
+                    <td>2</td>
+                    <td>0.20</td>
+                    <td>0.90</td>
+                </tr>
+                <tr>
+                    <td>String 4</td>
+                    <td>3%</td>
+                    <td>1</td>
+                    <td>0.10</td>
+                    <td>1.00</td>
+                </tr>
+            </table>
+
+            <div class="visualization">
+                <div class="segment" style="left: 0%; width: 40%; background-color: #3498db;">String 1 (40%)</div>
+                <div class="segment" style="left: 40%; width: 30%; background-color: #2ecc71;">String 2 (30%)</div>
+                <div class="segment" style="left: 70%; width: 20%; background-color: #e74c3c;">String 3 (20%)</div>
+                <div class="segment" style="left: 90%; width: 10%; background-color: #f1c40f;">String 4 (10%)</div>
+                <div class="pointer" style="left: 45%;"></div>
+            </div>
+            <p>Random number (0.45) selects: <strong>String 2</strong></p>
+        </div>
+
+        <div class="comparison">
+            <div class="pros-cons">
+                <h3>Roulette-Wheel Selection</h3>
+                <div class="pros">
+                    <h4>Pros:</h4>
+                    <ul>
+                        <li>Directly proportional to fitness values</li>
+                        <li>Preserves high-fitness solutions effectively</li>
+                        <li>Faster convergence in ideal conditions</li>
+                    </ul>
+                </div>
+                <div class="cons">
+                    <h4>Cons:</h4>
+                    <ul>
+                        <li>Can lead to premature convergence</li>
+                        <li>Dominated by highest fitness value</li>
+                        <li>Low diversity maintenance</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="pros-cons">
+                <h3>Rank Selection</h3>
+                <div class="pros">
+                    <h4>Pros:</h4>
+                    <ul>
+                        <li>More balanced selection pressure</li>
+                        <li>Better preservation of genetic diversity</li>
+                        <li>Less prone to premature convergence</li>
+                        <li>More resilient to extreme fitness differences</li>
+                    </ul>
+                </div>
+                <div class="cons">
+                    <h4>Cons:</h4>
+                    <ul>
+                        <li>Slower convergence</li>
+                        <li>Might not emphasize very good solutions enough</li>
+                        <li>Ignores actual magnitude of fitness differences</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="conclusion">
+            <h2>Conclusion</h2>
+            <p>In this specific case with highly skewed fitness values (80%, 10%, 7%, 3%), <strong>Rank Selection</strong> is the better choice because:</p>
+            <ul>
+                <li>It provides more balanced selection probabilities (40%, 30%, 20%, 10%)</li>
+                <li>Maintains better population diversity</li>
+                <li>Reduces the risk of premature convergence</li>
+                <li>Offers better long-term optimization potential</li>
+            </ul>
+            <p>While Roulette-Wheel selection might converge faster, Rank Selection's better balance between exploitation and exploration makes it more likely to find the global optimum in this scenario.</p>
+        </div>
+    </div>
+</body>
+</html>
+</main>
 </html>
   </main>
 </body>
