--- a/index.html
+++ b/index.html
@@ -517,3 +517,63 @@
   </main>
 </body>
 </html>
+<html>
+<title>LUND CHUS LE MERA</title>
+  <body>
+    Q B1- <!DOCTYPE html>
+<html>
+<head>
+  <title>Linear Separability</title>
+</head>
+<body>
+
+  <h1>Linear Separability</h1>
+
+  <p>
+    Linear separability refers to the ability to divide two sets of data points in a multidimensional space using a single straight line or hyperplane (a higher-dimensional generalization of a line).
+  </p>
+
+  <h2>Example</h2>
+
+  <p>
+    Imagine you have a dataset of fruits: apples and oranges. Each fruit is represented by two features: weight and diameter.
+  </p>
+
+  <ul>
+    <li>
+      <strong>Linearly Separable:</strong> If you can draw a single straight line on a weight-diameter graph that perfectly separates all the apples from all the oranges, the dataset is considered linearly separable. 
+      <br>
+      [attachment_0](attachment) 
+    </li>
+    <li>
+      <strong>Non-Linearly Separable:</strong> If no such line can be drawn, meaning the fruits are mixed together without a clear linear boundary, the dataset is non-linearly separable.
+      <br>
+      [attachment_1](attachment) 
+    </li>
+  </ul>
+
+  <h2>Why is Linear Separability Important?</h2>
+
+  <ul>
+    <li>
+      <strong>Machine Learning:</strong> Many machine learning algorithms, such as the Perceptron and Support Vector Machines, rely on the assumption of linear separability. These algorithms aim to find the optimal hyperplane that best separates the data.
+    </li>
+    <li>
+      <strong>Data Visualization:</strong> Understanding linear separability helps in visualizing and interpreting data, making it easier to identify patterns and trends.
+    </li>
+    <li>
+      <strong>Algorithm Selection:</strong> Knowing whether data is linearly separable can guide the choice of appropriate machine learning algorithms.
+    </li>
+  </ul>
+
+  <h2>In Summary</h2>
+
+  <p>
+    Linear separability is a fundamental concept in machine learning and data analysis. It provides a simple yet powerful way to understand the structure of data and choose suitable algorithms for classification and other tasks.
+  </p>
+
+</body>
+</html>
+
+  </body>
+</html>
