--- a/index.html
+++ b/index.html
@@ -518,7 +518,6 @@
 </body>
 </html>
 <html>
-<title>LUND CHUS LE MERA</title>
   <body>
     Q B1- <!DOCTYPE html>
 <html>
@@ -571,6 +570,84 @@
   <p>
     Linear separability is a fundamental concept in machine learning and data analysis. It provides a simple yet powerful way to understand the structure of data and choose suitable algorithms for classification and other tasks.
   </p>
+Q B2- <!DOCTYPE html>
+<html>
+<head>
+  <title>Fuzzy Set Operations</title>
+</head>
+<body>
+
+  <h1>Fuzzy Set Operations</h1>
+
+  <h2>Defined Fuzzy Sets</h2>
+
+  <ul>
+    <li><strong>Fuzzy Set A:</strong> 
+      <ul>
+        <li>A = {(a1, 0.5), (a2, 0.2), (a3, 0.1)}</li>
+      </ul>
+    </li>
+    <li><strong>Fuzzy Set B:</strong> 
+      <ul>
+        <li>B = {(b1, 0.8), (b2, 0.4)}</li>
+      </ul>
+    </li>
+    <li><strong>Fuzzy Set C:</strong> 
+      <ul>
+        <li>C = {(c1, 0.3), (c2, 0.8)}</li>
+      </ul>
+    </li>
+  </ul>
+
+  <h2>Defined Fuzzy Relations</h2>
+
+  <ul>
+    <li><strong>Relation R on A x B:</strong>
+      <ul>
+        <li>R = {(a1, b1, 0.5), (a1, b2, 0.4), (a2, b1, 0.2), (a2, b2, 0.2), (a3, b1, 0.1), (a3, b2, 0.1)}</li>
+      </ul>
+    </li>
+    <li><strong>Relation S on A x C:</strong>
+      <ul>
+        <li>S = {(a1, c1, 0.3), (a1, c2, 0.5), (a2, c1, 0.2), (a2, c2, 0.2), (a3, c1, 0.1), (a3, c2, 0.1)}</li>
+      </ul>
+    </li>
+  </ul>
+
+  <h2>Calculated Operations</h2>
+
+  <ul>
+    <li><strong>R U S (Union of Relations):</strong>
+      <ul>
+        <li>R U S = {(a1, b1, 0.5), (a1, b2, 0.4), (a1, c1, 0.3), (a1, c2, 0.5), 
+                  (a2, b1, 0.2), (a2, b2, 0.2), (a2, c1, 0.2), (a2, c2, 0.2), 
+                  (a3, b1, 0.1), (a3, b2, 0.1), (a3, c1, 0.1), (a3, c2, 0.1)}</li>
+      </ul>
+    </li>
+    <li><strong>R ∩ S (Intersection of Relations):</strong>
+      <ul>
+        <li>R ∩ S = {} (Empty set)</li>
+      </ul>
+    </li>
+    <li><strong>R° (Composition of R):</strong>
+      <ul>
+        <li>R° is not directly defined in this context. More information about the desired composition operation (e.g., max-min composition) is needed.</li>
+      </ul>
+    </li>
+    <li><strong>S° (Composition of S):</strong>
+      <ul>
+        <li>S° is not directly defined in this context. More information about the desired composition operation (e.g., max-min composition) is needed.</li>
+      </ul>
+    </li>
+    <li><strong>(R U S)° = R° U S°:</strong>
+      <ul>
+        <li>Without the explicit definitions of R° and S°, it's not possible to directly verify this equation. However, in general, the composition of a union of relations is not always equal to the union of the compositions of the individual relations.</li>
+      </ul>
+    </li>
+  </ul>
+
+</body>
+</html>
 
 </body>
 </html>
