--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fuzzy Logic Controller Solution</title>
+    <title>KITNA LIKHEGI RAND.</title>
     <style>
         body {
             font-family: Arial, sans-serif;
