--- a/index.html
+++ b/index.html
@@ -53,6 +53,45 @@
     </style>
 </head>
 <body>
+  Q13: Formulate a payoff matrix and derive equilibrium using the best-response method<br>
+Payoff Matrix:<br>
+Manager/Employee Extra Effort (E) Minimal Effort (M)<br>
+High-Responsibility Task (H) (6, 5) (1, 2)<br>
+Low-Responsibility Task (L) (4, 3) (2, 1)<br>
+Best-Response Method:<br>
+Step 1: Identify the employee's best response for each manager's decision.<br>
+If the manager assigns H:<br>
+Payoffs for employee: Extra Effort (5) > Minimal Effort (2). Best response: E.<br>
+If the manager assigns L:<br>
+Payoffs for employee: Extra Effort (3) > Minimal Effort (1). Best response: E.<br>
+Step 2: Identify the manager's best response for each employee's decision.<br>
+If the employee chooses E:<br>
+Payoffs for manager: H (6) > L (4). Best response: H.<br>
+If the employee chooses M:<br>
+Payoffs for manager: H (1) < L (2). Best response: L.<br>
+Step 3: Find the Nash Equilibrium.<br>
+The pair of strategies where both players are best responding to each other is (H, E) with payoffs (6, 5).<br>
+Q14: Design an extensive form game and derive equilibrium using backward induction<br>
+Extensive Form Game (Tree Representation):<br>
+Stage 1 (Manager's Decision):<br>
+Manager chooses between H (High-Responsibility) or L (Low-Responsibility).<br>
+Stage 2 (Employee's Decision):<br>
+After observing the task, the employee chooses between E (Extra Effort) or M (Minimal Effort).<br>
+Payoffs at Each Leaf Node:<br>
+H → E: (6, 5)<br>
+H → M: (1, 2)<br>
+L → E: (4, 3)<br>
+L → M: (2, 1)<br>
+Backward Induction:<br>
+Employee's Decision:<br>
+For H: E (5) > M (2) → Best response: E.<br>
+For L: E (3) > M (1) → Best response: E.<br>
+Manager's Decision:<br>
+Knowing the employee will choose E, the manager compares payoffs:<br>
+H → E: 6 vs. L → E: 4. Best response: H.<br>
+Nash Equilibrium (Subgame Perfect Equilibrium):<br>
+The equilibrium strategy is (H, E) with payoffs (6, 5).<br>
+
  PASTE HERE 
   </body>
 </html>
